@@ -1961,6 +1961,7 @@ static void	DCsync_interfaces(zbx_dbsync_t *sync)
 	ZBX_DC_INTERFACE	*interface;
 	ZBX_DC_INTERFACE_HT	*interface_ht, interface_ht_local;
 	ZBX_DC_INTERFACE_ADDR	*interface_snmpaddr, interface_snmpaddr_local;
+	ZBX_DC_HOST		*host;
 
 	int			found, update_index, ret, i;
 	zbx_uint64_t		interfaceid, hostid;
@@ -1984,6 +1985,11 @@ static void	DCsync_interfaces(zbx_dbsync_t *sync)
 		ZBX_STR2UCHAR(main_, row[3]);
 		ZBX_STR2UCHAR(useip, row[4]);
 		ZBX_STR2UCHAR(bulk, row[8]);
+
+		/* If there is no host for this interface, skip it. */
+		/* This may be possible if the host was added after we synced config for hosts. */
+		if (NULL == (host = (ZBX_DC_HOST *)zbx_hashset_search(&config->hosts, &hostid)))
+			continue;
 
 		interface = (ZBX_DC_INTERFACE *)DCfind_id(&config->interfaces, interfaceid, sizeof(ZBX_DC_INTERFACE), &found);
 		zbx_vector_ptr_append(&interfaces, interface);
@@ -2089,28 +2095,21 @@ static void	DCsync_interfaces(zbx_dbsync_t *sync)
 		{
 			/* new interface - add it to a list of host interfaces in 'config->hosts' hashset */
 
-			ZBX_DC_HOST	*host;
+			int	exists = 0;
 
-			if (NULL != (host = (ZBX_DC_HOST *)zbx_hashset_search(&config->hosts, &interface->hostid)))
+			/* It is an error if the pointer is already in the list. Detect it. */
+
+			for (i = 0; i < host->interfaces_v.values_num; i++)
 			{
-				int	exists = 0;
-
-				/* It is an error if the pointer is already in the list. Detect it. */
-
-				for (i = 0; i < host->interfaces_v.values_num; i++)
+				if (interface == host->interfaces_v.values[i])
 				{
-					if (interface == host->interfaces_v.values[i])
-					{
-						exists = 1;
-						break;
-					}
+					exists = 1;
+					break;
 				}
-
-				if (0 == exists)
-					zbx_vector_ptr_append(&host->interfaces_v, interface);
-				else
-					THIS_SHOULD_NEVER_HAPPEN;
 			}
+
+			if (0 == exists)
+				zbx_vector_ptr_append(&host->interfaces_v, interface);
 			else
 				THIS_SHOULD_NEVER_HAPPEN;
 		}
@@ -2127,6 +2126,7 @@ static void	DCsync_interfaces(zbx_dbsync_t *sync)
 	}
 
 	/* remove deleted interfaces from buffer */
+
 	for (; SUCCEED == ret; ret = zbx_dbsync_next(sync, &rowid, &row, &tag))
 	{
 		ZBX_DC_HOST	*host;
